# fktb

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  main.cc  test.cc  test.h  uci.cc  uci.h
src/engine/: CMakeLists.txt  bitboard.cc  bitboard.h  board.cc  board.h  engine.cc  engine.h  evaluation.cc  evaluation.h  fen.cc  fen.h  fixed_search.cc  fixed_search.h  init.h  inline.h  intrinsics.h  iterative_search.cc  iterative_search.h  lock.cc  lock.h  move.cc  move.h  move_list.cc  move_list.h  move_queue.cc  move_queue.h  move_score.cc  move_score.h  movegen.cc  movegen.h  movesort.cc  movesort.h  mutex.h  piece.cc  piece.h  search.cc  search.h  sync_transposition.cc  sync_transposition.h  transposition.cc  (+1 more)
src/engine/board/: CMakeLists.txt  bitboard.cc  bitboard.h  board.cc  board.h  castling.cc  castling.h  color.cc  color.h  fen.cc  fen.h  piece.cc  piece.h  square.cc  square.h
src/engine/eval/: CMakeLists.txt  accumulator.cc  accumulator.h  embedded_network.h  evaluation.cc  evaluation.h  game_phase.cc  game_phase.h  nnue.cc  nnue.h  piece_square_table.cc  piece_square_table.h
src/engine/hash/: CMakeLists.txt  transposition.cc  transposition.h
src/engine/move/: CMakeLists.txt  legality_check.cc  legality_check.h  move.cc  move.h  move_list.cc  move_list.h  move_score.cc  move_score.h  movegen.cc  movegen.h
src/engine/search/: CMakeLists.txt  debug_info.h  evaluation.cc  evaluation.h  fixed_search.cc  fixed_search.h  iterative_search.cc  iterative_search.h  score.h  statistics.h
src/engine/search/move_ordering/: CMakeLists.txt  heuristics.cc  heuristics.h  history.h  move_ordering.cc  move_ordering.h  move_stream.cc  move_stream.h  see.cc  see.h
